data/derived/comb/progs/unify/prog2663.ml.out
Characters 97-117:
  | h :: t -> bigAdd (mulByDigit (h l1')) a' in
                     ^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int list -> int list
       but an expression was expected of type int list
